logs/enfold.gcache.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/enfold'...
Listing './lib/python3.5/site-packages/enfold/gcache'...
Compiling './lib/python3.5/site-packages/enfold/gcache/cache.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/cache.py", line 414
    def do_set(self, key, (meta, data)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enfold/gcache/diskstorage.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/diskstorage.py", line 147
    self.data.open("metadata", db.DB_BTREE, db.DB_CREATE, 0666)
                                                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/enfold/gcache/examples'...
Compiling './lib/python3.5/site-packages/enfold/gcache/examples/caching_http_proxy.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/examples/caching_http_proxy.py", line 68
    print "Sending 304 response"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enfold/gcache/httpcache.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/httpcache.py", line 263
    raise Uncachable, "Response includes %s" % (cant_cache_reason,)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enfold/gcache/httpcacheprovider.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/httpcacheprovider.py", line 115
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enfold/gcache/tests'...
Compiling './lib/python3.5/site-packages/enfold/gcache/tests/hammer_gcache.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/tests/hammer_gcache.py", line 61
    print "Cache is at", os.path.abspath(dirname)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enfold/gcache/tests/scale.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/tests/scale.py", line 46
    print "With %d items in the cache, average lookup time was %.5g ms, set time was %.5g ms" % \
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enfold/gcache/tests/test.py'...
***   File "./lib/python3.5/site-packages/enfold/gcache/tests/test.py", line 59
    raise KeyError, key
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enfold.gcache-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
